# Multi-Layer-Kernel-Machine

./: .gitignore  LICENSE  LICENSE.txt  MultiLayerKernelMachine  README.md  package example usage(MSD).ipynb  pyproject.toml
Multi Layer Kernel Machine/: Fitting.py  Mydataset.py  RandomFeature.py  __init__.py
Multi-Layer-Kernel-Machine/: DataSplitting.py  Fitting.py  GenerateSplit.py  Mydataset.py  RandomFeature.py  Structure.py  __init__.py
MultiLayerKernelMachine/: DataSplitting.py  GenerateSplit.py  RandomFeature.py  Structure.py
Multi_Layer_Kernel_Machine/: DataSplitting.py  Fitting.py  GenerateSplit.py  RandomFeature.py  Structure.py  __init__.py
Numerical Examples/Real_Data_Examples/: Autodl_MSD.ipynb  RealData_DryBean.ipynb  RealData_Large_MSD.ipynb  RealData_MSD.ipynb  RealData_MSD_final.ipynb  RealData_SML.ipynb  RealData_SML_final.ipynb
Numerical Examples/Simulation_Examples/: Example4.ipynb
Numerical Results/Real_Data_Analysis/: RealData_House.ipynb  RealData_MSD.ipynb  RealData_SML.ipynb
Numerical Results/Simulation/: Additive Trigonometric 1.ipynb  Additive Trigonometric 2.ipynb  Additive mix 1.ipynb  Additive mix 2.ipynb  Additive sin-ratio 1.ipynb  Additive sin-ratio 2.ipynb  Gaussian Mixture Plus.ipynb  Gaussian Mixture.ipynb
Simulations & Real Data Analysis/: RealData_DryBean.ipynb  RealData_House.ipynb  RealData_MSD.ipynb  RealData_SML.ipynb  Simulation.ipynb
docs/: requirements.txt
docs/source/: DataSplitting.md  DataSplitting.rst  Fitting.md  Fitting.rst  GenerateSplit.md  GenerateSplit.rst  (+16 more)
tests/: package example usage(MSD).ipynb
(+118 files in other folders)
