[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Multi-Layer-Kernel-Machine"
version = "0.1.1"
authors = [
  { name="Xiaowu Dai"}, 
  { name="Huiying Zhong"}, 
  {email="zhonghuiying826@stu.pku.edu.cn" },
]
description = "A package for the implementation of the multi-layer kernel machines (MLKM)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.5.3",
  "tqdm>=4.65.0",
  "scikit-learn>=1.2.1",
  "pytorch>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/ZZZhyEva/Multi-Layer-Kernel-Machines"
"Bug Tracker" = "https://github.com/ZZZhyEva/Multi-Layer-Kernel-Machines/issues"